# simulacao-fisica-eletromagnetismo

allegro/: Install-Allegro-from-Ubuntu-PPAs.md  Install-Allegro-from-source-on-Ubuntu.md
allegro/01/: mouse_pos.c
allegro/02/: mouse_pos.c
allegro/03/: Makefile  README.md  mouse_pos.c
allegro/04/: README.md  mouse_pos.c
allegro/05/: mouse_pos.c
allegro/07/: Makefile  mouse_pos.c
allegro/08/: Makefile  mouse_pos.c
allegro/10/: Makefile  mouse_pos.c
allegro/11/: CMakeLists.txt  compile  mouse_pos.c
allegro/12/: .gitignore  CMakeLists.txt  README.md  build.sh
allegro/13/: .clang-format  Makefile  README.md  mouse_pos.c
allegro/14/: .gitignore  DICAS.md  Makefile  main.c
allegro/15/: Makefile  automake.md  automake.sh  main.cpp
